--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/GoalVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/GoalVis.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
-<div id="goalChartHeading@(Model)"></div>
+<div id="goal@(Model)ChartHeading"></div>
 
 <div class="chart-wrapper">
-     <div id="goalChart@(Model)"></div>
+     <div id="goal@(Model)Chart"></div>
 </div>
