--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -96,13 +96,7 @@
               | Dashboard VTab
               +------------->*@
         <li id="vertical1Tab" class="active">
-            <div class="ten columns portaltabs-h">
-                <dl class="tabs">
-                    <dd class="active"><a href="#dashboard">Dashboard</a></dd>
-                </dl>
-                <ul class="tabs-content">
-                    <li id="dashboardTab" class="active"></li>
-                </ul>
+            <div class="ten columns" id="dashboardTab">
             </div>
         </li>
         <!-- /DashboardVTabContent   -->
