--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SpendVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SpendVis.cshtml
@@ -127,11 +127,11 @@
 
         var spark = (total > 62);
         if (spark) {
-            chart.options.valueAxis.majorGridLines.visible = false;
+            //chart.options.valueAxis.majorGridLines.visible = false;
             chart.options.categoryAxis.majorGridLines.visible = false;
             chart.options.series[0].markers.visible = false;
         } else {
-            chart.options.valueAxis.majorGridLines.visible = true;
+            //chart.options.valueAxis.majorGridLines.visible = true;
             chart.options.categoryAxis.majorGridLines.visible = true;
             chart.options.series[0].markers.visible = true;
         }
